[FIX] stock_barcode: bigger control button
Before this commit, the footer buttons in the Barcode app are too small.
This commit undoes that, making the buttons' size more or less the same
whatever the device's size or orientation.
That said, their height are still smaller in case the device height is
smaller than 800 px.

closes odoo/enterprise#60881

Task: fp request
X-original-commit: fc73fb93833a15f88a7c68155080171c778fcc1b
Related: odoo/odoo#162125

--- a/stock_barcode/static/src/components/main.scss
+++ b/stock_barcode/static/src/components/main.scss
@@ -99,10 +99,7 @@
             flex: 1 1 0px;
             border-width: 1px 0 0 0;
             border-style: solid;
-            @media (orientation: portrait) {
-                font-size: 0.8em;
-            }
-            @media (orientation: landscape) {
+            @media (min-height: 800px) {
                 height: 60px;
             }
             &.btn-secondary {
